--- a/4page.html
+++ b/4page.html
@@ -1,24 +1,27 @@
 ﻿<html>
 <head>
-<title>我的第4頁 </title>
+<title>我的第4頁 網際網路心得</title>
 </head>
 <body>	
 	
 
-<a href="index.html">連到駁二特區 </a>
+<a href="index.html">連到首頁 駁二藝術特區 </a>
+
+<a href="2nd.html">連到第2頁 駁二小火車</a>
+
+<a href="3rd.html">連到第3頁 駁二造型椅</a>
+
+
 <p>
-<a href="2nd.html">連到第2頁 </a>
-<p>
-<a href="3rd.html">連到第3頁 </a>
 
 
-
-
-<title>網際網路應用心得感想!</title>
 </head>
-<body text=" ffffff" background="4.jpg">
+<body text=" 000000" background="4.jpg">
 
-<font face=" 標楷體" size="10">學到很多,但不能融會貫通,尚待多練習</b>
+<font face=" 標楷體" size="6">~網際網路應用心得~</b>
+
+<p>
+<font face=" 標楷體" size="5">學到很多,但不能融會貫通,尚待多練習</b>
 
 
 <br>
