--- a/2nd.html
+++ b/2nd.html
@@ -1,18 +1,18 @@
 ﻿
 <html>
 <head>
-<title>我的第2頁</title>
+<title>我的第2頁 駁二小火車</title>
 </head>
 <body>
 
-<a href="index.html">連到我的首頁</a>
-<p>
-<a href="3rd.html">連到第3頁 </a>
-<p>
-<a href="4page.html">連到第4頁 </a>
+<a href="index.html">連到首頁 駁二藝術特區</a>
+
+<a href="3rd.html">連到第3頁 駁二造型椅</a>
+
+<a href="4page.html">連到第4頁 網際網路心得</a>
 
 <br>
-<img src="2.jpg" height="300" width="300" title="特區2" alt="特區2"/>
+<img src="2.jpg" height="500" width="500" title="特區2" alt="特區2"/>
 
 </body>
 </html>
