--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 ﻿<html>
 <head>
-<title>駁二藝術特區</title>
+<title>我的首頁 駁二藝術特區</title>
 </head>
 <body>
 
-<a href="2nd.html">連到第2頁 </a>
-<p>
-<a href="3rd.html">連到第3頁 </a>
-<p>
-<a href="4page.html">連到第4頁 </a>
+<div>
+<audio src="media/001.mp3"controls />
+</div>
+
+<a href="2nd.html">連到第2頁 駁二小火車 </a>
+
+<a href="3rd.html">連到第3頁 駁二造型椅</a>
+
+<a href="4page.html">連到第4頁 網際網路心得</a>
 
 
 <br>
-<img src="1.jpg" height="300" width="300" title="特區1" alt="特區1"/>
+<img src="1.jpg" height="500" width="500" title="特區1" alt="特區1"/>
 
 
 </body>
