--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 
 <div>
-<audio src="media/001.mp3"controls />
+<video src="media/001.mp3" controls />
 </div>
 
 <a href="2nd.html">連到第2頁 駁二小火車 </a>
