--- a/2nd.html
+++ b/2nd.html
@@ -4,6 +4,8 @@
 <title>我的第2頁 駁二小火車</title>
 </head>
 <body>
+<center>
+
 
 <a href="index.html">連到首頁 駁二藝術特區</a>
 
@@ -12,7 +14,18 @@
 <a href="4page.html">連到第4頁 網際網路心得</a>
 
 <br>
-<img src="2.jpg" height="500" width="500" title="特區2" alt="特區2"/>
+<img src="2.jpg" height="300" width="300" title="特區2" alt="特區2"/>
+
+
+<img src="2-2.jpg" height="300" width="300" title="特區2-2" alt="特區2-2"/>
+
+
+<br>
+<font face ="標楷體">
+駁二小火車<br><i>~駁二必玩必逛！全台三處可搭乘小火車「哈瑪星駁二線迷你小火車」親子共遊好去處～</i>
+   
+</font>
+</center>
 
 </body>
 </html>
