--- a/4page.html
+++ b/4page.html
@@ -3,7 +3,7 @@
 <title>我的第4頁 網際網路心得</title>
 </head>
 <body>	
-	
+<center>	
 
 <a href="index.html">連到首頁 駁二藝術特區 </a>
 
@@ -16,13 +16,19 @@
 
 
 </head>
-<body text=" 000000" background="4.jpg">
+<body text="330099" background="4.jpg">
 
 <font face=" 標楷體" size="6">~網際網路應用心得~</b>
 
 <p>
-<font face=" 標楷體" size="5">學到很多,但不能融會貫通,尚待多練習</b>
+<font face=" 標楷體" size="4">這學期有機會修網際網路這門課，真的獲益匪淺!先感朱晉德老師辛苦的教學，<br>
+以及特地安排的教材，讓我們在輕鬆的氣氛下，來上這門課。<br>因此~讓我開始接觸網路。目前網路的應用範圍非常廣泛，<br>
+<i>像比較常用到的如購物、查詢資料、網路轉帳等等，都是日常生活中常會用到，</i><br>
+也因此，網路為現代人生活帶來極大的改變，除了便利性，最重要的，是讓我隨時隨地都能獲取新的知識。
 
+
+</font>
+</center>
 
 
 </body>
