--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>我的首頁 駁二藝術特區</title>
 </head>
 <body>
+<center>
 
 <div>
 <audio src="media/001.mp3" controls />
@@ -16,9 +17,23 @@
 <a href="4page.html">連到第4頁 網際網路心得</a>
 
 
-<br>
-<img src="1.jpg" height="500" width="500" title="特區1" alt="特區1"/>
 
+<br>
+<img src="1.jpg" height="300" width="300" title="特區1" alt="特區1"/>
+
+<img src="1-1.jpg" height="300" width="300" title="特區1-1" alt="特區1-1"/>
+
+
+<br>
+<font face ="標楷體">
+駁二藝術特區<br>                                                                                      
+在駁二這個地方，衝突是一股美好的力量。<br>
+被歷史塵封的陳舊倉庫，時光凝結了種種發展跡象，因為藝術文化的呼聲被解放，<br>
+不斷注入創意靈感而重獲新生，日漸茁壯。在<i>舊</i>與<i>新</i>的衝突中，衝撞出的是勃發的生命力。
+
+</font>
+</center>
 
 </body>
+
 </html>
