--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <center>
 
 <div>
-<audio src="media/001.mp3" controls />
+<embed src="image/001.mp3" autostart=true hidden=true loop=true/>
 </div>
 
 
