--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 </head>
 <body>
 <center>
-
 <div>
-<embed src="image/001.mp3" autostart=true hidden=true loop=true/>
+<embed src="image/001.mp3" autostart=true hidden=true loop=true>
 </div>
 
-
-<a href="2nd.html">連到第2頁 駁二小火車 </a>
+  <a href="2nd.html">連到第2頁 駁二小火車 </a>
 
 <a href="3rd.html">連到第3頁 駁二造型椅</a>
 
