--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 ﻿<html>
 <head>
 <title>我的首頁 駁二藝術特區</title>
+ <div> 
 <embed src="image/001.mp3" autostart=true hidden=true loop=true>
-</head>
+</div>
+   
+ </head>
 <body>
 <center>
 
