--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <title>我的首頁 駁二藝術特區</title>
 </head>
 <body>
-<div> 
-<embed src="image/001.mp3" autostart=true hidden=true loop=true>
+<div>
+<audio src="media/001.mp3" controls />
 </div>
 
 <center>
