--- a/index.html
+++ b/index.html
@@ -1,37 +1,21 @@
-﻿﻿<html>
-
+<html>
 <head>
 
 <title>我的首頁 駁二藝術特區</title>
-
 <embed src="image/001.mp3" autostart=true hidden=true loop=true>
-
-
 </head>
-
 <body>
-
 <center>
-
-
-
-
 
 <a href="2nd.html">連到第2頁 駁二小火車 </a>
 
-
 <a href="3rd.html">連到第3頁 駁二造型椅</a>
 
-
 <a href="4page.html">連到第4頁 網際網路心得</a>
-
-
-
 
 <br>
 
 <img src="1.jpg" height="300" width="300" title="特區1" alt="特區1"/>
-
 
 <img src="1-1.jpg" height="300" width="300" title="特區1-1" alt="特區1-1"/>
 
@@ -45,12 +29,9 @@
 
 不斷注入創意靈感而重獲新生，日漸茁壯。在<i>舊</i>與<i>新</i>的衝突中，衝撞出的是勃發的生命力。
 
-
 </font>
 
 </center>
 
-
 </body>
-
-
+</html>
