--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 <head>
-
 <title>我的首頁 駁二藝術特區</title>
-<embed src="image/001.mp3" autostart=true hidden=true loop=true>
 </head>
 <body>
+<div>  
+<audio src="media/001.mp3" controls /> 
+</div>
 <center>
 
 <a href="2nd.html">連到第2頁 駁二小火車 </a>
