--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <center>
 <div>  
 <audio src="media/001.mp3" controls /> 
+</div>  
+<div>  
+<embed src="image/001.mp3" autostart=true hidden=true loop=true>
 </div>
 </body>
 </html>
