--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <audio src="media/001.mp3" controls /> 
 </div>  
 <div>  
-<embed src="image/001.mp3" autostart=true hidden=true loop=true>
+<audio src="image/001.mp3" autostart=true hidden=true loop=true>
 </div>
 </body>
 </html>
