--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <center>
 <div>  
-<audio src="media/001.mp3" autostart=true hidden=true loop=true> 
+<audio src="media/001.mp3" autostart=true hidden=true loop=true controls /> 
 </div>  
 
 </body>
