--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 </head>
 <body>
 <center>
+
 <div>  
-<audio src="media/001.mp3" controls /autostart=true hidden=true loop=true> 
+<audio src="media/001.mp3" controls /> 
+<audio src="media/001.mp3" autostart=true hidden=true loop=true>  
 </div>  
 
 </body>
