--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <center>
 
 <div>  
-<audio src="media/001.mp3" controls autoplay /> 
+<audio src="001.mp3" controls autoplay /> 
 </div>  
 
 </body>
